# instant-rm

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  requirements_tests.txt  setup.cfg
instant_rm/: __init__.py  antenna.py  backscattering_material.py  constants.py  lambertian_material.py  ray_tube.py  smooth_material.py  tracer.py  tracer_prb.py  utils.py
notebooks/: Calibration.ipynb  Differentiable_Geometry.ipynb  Tutorial.ipynb
scenes/box/: box.xml
scenes/box_multi/: box_multi.xml
scenes/double_backscattering_reflector/: double_backscattering_reflector.xml
scenes/double_lambertian_reflector/: double_lambertian_reflector.xml
scenes/double_reflector/: double_reflector.xml
scenes/etoile/: etoile.xml
scenes/etoile_backscattering/: etoile_backscattering.xml
scenes/etoile_calibration/: etoile_calibration.xml
scenes/etoile_lambertian/: etoile_lambertian.xml
scenes/floor_wall_backscattering/: floor_wall_backscattering.xml
scenes/hemisphere/: hemisphere.xml
scenes/hemisphere/meshes/: Ground.ply  Reflector.ply  Screen_1.ply  Screen_2.ply
scenes/munich/: munich.xml
scenes/simple_backscattering_reflector/: simple_backscattering_reflector.xml
scenes/simple_lambertian_reflector/: simple_lambertian_reflector.xml
scenes/simple_reflector/: simple_reflector.xml
tests/: test_backscattering.ipynb  test_lambertian.ipynb  test_mean_directions.ipynb  test_rbp.ipynb  test_rdsm.ipynb  test_rr.ipynb  test_specular.ipynb
