[metadata]
name = instant_rm
version = 0.1
author = NVIDIA
author_email = faitaoudia@nvidia.com
description = Instant Radio Maps - Fast and Differentiable Radio Maps
long_description = file: README.md
license = NVIDIA License
url = https://github.com/NVlabs/instant-rm

[options]
package_dir == .
packages = find:
include_package_data = True
python_requires = >=3.10

install_requires =
    numpy
    scipy >=1.6.0
    matplotlib

[options.package_data]
* = *.xml, *.ply *.gif
